[gd_scene load_steps=2 format=2]

[ext_resource path="res://stockpile_interface.gd" type="Script" id=1]

[node name="StockpileInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 320.0
margin_bottom = 20.0

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer"]
margin_right = 115.0
margin_bottom = 20.0
text = "Create Stockpile"

[node name="Line2D" type="Line2D" parent="."]

[connection signal="pressed" from="MarginContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
